# storage

./: .gitignore  Makefile  pyproject.toml
docker/: Dockerfile
helm/storage/: Chart.yaml  values.yaml
helm/storage/templates/: configmap.yaml  cronjob.yaml  secret.yaml
infra/: terragrunt.hcl
infra/aws/staging/: account.hcl
infra/aws/staging/eu-west-2/s3/: .terraform.lock.hcl
scripts/: build.sh
storage/: __main__.py  logic.py  setup.py
