[tool.poetry]
name = "storage"
version = "0.1.0"
description = ""
authors = ["Ciaran <ciaranmckey@gmail.com>"]


[tool.poetry.dependencies]
python = "~3.11"
boto3 = "^1.34.34"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pylint = "^2.17.4"
ruff = "^0.0.278"
black = "^23.7.0"
pytest = "^7.4.0"
ipykernel = "^6.25.2"
boto3-stubs = { extras = ["s3"],version = "^1.28.39" }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]



[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = ["E", "PLE", "F", "W605", "S", "RUF"]
ignore = ["S104"]
exclude = ["tests"]
show-fixes = true
